# Gen2D-Game-Engine

./: .gitignore  README.md
docs/: AnimatedTexture_8hpp_source.html  Area_8hpp_source.html  GameEntity_8hpp_source.html  Game_8hpp_source.html  Globals_8hpp_source.html  Graphics_8hpp_source.html  Texture_8hpp_source.html  Timer_8hpp_source.html  annotated.html  classAnimatedTexture-members.html  classAnimatedTexture.html  classArea-members.html  (+18 more)
protoype/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
protoype/docs/: Doxyfile  Doxyfile.in
protoype/docs/html/: AnimatedTexture_8cpp.html  AnimatedTexture_8hpp_source.html  AssetManager_8hpp_source.html  AudioManager_8hpp_source.html  GameManager_8hpp_source.html  InputManager_8hpp_source.html  Input_8hpp_source.html  MathHelper_8hpp_source.html  Mathhelper_8hpp_source.html  classAnimatedTexture-members.html  classAnimatedTexture.html  classAssetManager.html  classGameEntity-members.html  classGameEntity.html  classGameManager.html  classGraphics-members.html  classGraphics.html  classInputManager-members.html  classLTexture-members.html  classTexture-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  hierarchy.html  structVector2.html
protoype/docs/html/search/: all_0.js  enums_0.js  enums_1.js  files_0.js  functions_1.js  functions_2.js  searchdata.js
protoype/headers/: AnimatedTexture.hpp  AssetManager.hpp  AudioManager.hpp  GameEntity.hpp  GameManager.hpp  Graphics.hpp  InputManager.hpp  MathHelper.hpp  Texture.hpp  Timer.hpp
protoype/prod/: game
protoype/src/: AnimatedTexture.cpp  AssetManager.cpp  AudioManager.cpp  GameEntity.cpp  GameManager.cpp  Graphics.cpp  InputManager.cpp  Main.cpp  Texture.cpp  Timer.cpp
(+8 files in other folders)
